# fastapi_zero

./: README.md  pyproject.toml
fastapi_zero/: app.py  schemas.py
migrations/versions/: 4e669ef7aacd_created_urser_updated_at.py  b72072e76a16_create_user_table.py
tests/: conftest.py  test_app.py  test_db.py
